CHANGES IN VERSION 0.4.5
------------------------
 o ... parameter in save_sticker <2018-09-03, Mon>
 
CHANGES IN VERSION 0.4.2
------------------------
 o update code according to the change of geom_subview <2017-11-22, Wed>

CHANGES IN VERSION 0.4.0
------------------------
 o remove ggforce dependency <2017-06-19, Mon>

CHANGES IN VERSION 0.3.0
------------------------
 o URL at lower border of sticker <2017-04-19, Wed>
   + https://github.com/GuangchuangYu/hexSticker/issues/9

CHANGES IN VERSION 0.2.1
------------------------
 o bug fixed of whiteTrans <2017-04-19, Wed>
   + https://github.com/GuangchuangYu/hexSticker/pull/8

CHANGES IN VERSION 0.2.0
------------------------
 o support spotlight <2017-04-05, Wed>
   + <https://github.com/GuangchuangYu/hexSticker/issues/7>

CHANGES IN VERSION 0.1.0
------------------------
 o geom_hexagon, geom_pkgname, theme_sticker <2017-03-21, Tue>
 o use ggimage::geom_subview and ggimage::geom_image <2017-03-21, Tue>

CHANGES IN VERSION 0.0.2
------------------------
 o support select font typeface <2017-03-15, Wed>
   + https://github.com/GuangchuangYu/hexSticker/issues/4
 o move package name to top layer <2017-03-14, Tue>
   + https://github.com/GuangchuangYu/hexSticker/issues/3

CHANGES IN VERSION 0.0.1
------------------------
 o initial version based on my script to generate ggtree sticker <2017-03-13, Mon>
   + https://github.com/jotsetung/BioC-stickers/blob/master/ggtree/ggtree_sticker.R