@@ -1,5 +1,6 @@
 CHANGES IN VERSION 0.4.5
 ------------------------
+ o dpi paramter in sticker <2018-09-10, Mon>
  o ... parameter in save_sticker <2018-09-03, Mon>
  
 CHANGES IN VERSION 0.4.2
